# YandexRed

./: .gitignore  pthread4cmake.txt
03_SortBy/: airline_ticket.h  grader.cpp  sort_by.cpp
04_UPDATE_FIELD/: CMakeLists.txt  update_field.cpp
05_BAD_MACRO/: CMakeLists.txt  print_values.cpp
06_UNIQ_ID/: CMakeLists.txt  uniq_id.cpp
07_templateTABLE/: CMakeLists.txt  grader.cpp  table.cpp
08_classDeque/: CMakeLists.txt  deque.cpp  deque.h  reference_solution.cpp
09_Paginator/: CMakeLists.txt  paginator.cpp  reference_solution.cpp
10_StudentSorting/: sort_students.cpp
11_Learner/: learner.cpp  learner.h  main.cpp  reference_solution.cpp
12_Express/: fast.cpp  grader.cpp  reference_colution.cpp  slow.cpp  slow2.cpp
13_Ebook/: fast.cpp  grader.cpp  reference_solution.cpp  slow.cpp
14_Booking/: booking.cpp  reference_solution.cpp
15_ObjPool/: object_pool.cpp
16_SwapSortCopy(unfinished)/: swap_sort_copy.cpp
17_MyVector/: reference_solution.h  simple_vector.cpp  simple_vector.h
18_LinkedList/: linked_list.cpp  reference_solution.cpp
19_Sportsmen/: sportsmen.cpp
20_StackVector/: reference_solution.h  stack_vector.cpp  stack_vector.h
21_Translator/: translator.cpp
22_AirportCounter/: airport_counter.cpp  reference_solution.cpp
23_TextEditor/: example.cpp  ideas  reference_solution.cpp  text_editor.cpp
24_ServerStats/: reference_solution.cpp  reference_solution.h  stats.cpp  stats.h
25_Josephus/: grader.cpp  josephus_wip.cpp  reference_solution.cpp  test_function_output.cpp
26_StringGroup/: group_heavy_strings.cpp  test_func.cpp
(+26 files in other folders)
